[tool.poetry]
name = "coding-sample-python"
version = "0.1.0"
description = ""
authors = ["Edward Cardinal <edcgit@mindthump.com>"]
readme = "README.md"
packages = [{include = "coding_sample_python"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

